@@ -5,9 +5,13 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class ReadTxt {
-    public void readTxt(String path) throws IOException {
+    public String readTxt(String path) throws IOException {
         //read file
-        String data = Files.readString(Paths.get(path));
-        System.out.println(data);
+        //        System.out.println(data);
+        return Files.readString(Paths.get(path));
+    }
+
+    public byte[] readTxtBytes(String path) throws IOException {
+        return Files.readAllBytes(Paths.get(path));
     }
 }
